--- a/app.html
+++ b/app.html
@@ -44,7 +44,7 @@
                 <br />
                 <label for="inputSummary">Summary</label>
                 <input
-                  type="number"
+                  type="text"
                   placeholder="Summary"
                   class="form-control"
                   id="inputSummary"
