create new anime - app

--- a/app.html
+++ b/app.html
@@ -35,7 +35,7 @@
                 <br />
                 <label for="inputReleaseDate">Release Date</label>
                 <input
-                  type="text"
+                  type="date"
                   placeholder="Release Date"
                   class="form-control"
                   id="inputReleaseDate"
@@ -50,6 +50,10 @@
                   id="inputSummary"
                   required
                 />
+                <br />
+                <input id="inputOngoing" type="checkbox" />
+                <label for="inputOngoing">Ongoing</label>
+                <br />
                 <br />
                 <input id="inputConfirmation" type="checkbox" />
                 <label for="inputConfirmation"></label>
